--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -51,9 +51,9 @@ block content
                     a(href=`/profile/${profileUser.username}/followers`)
                         span#followersValue.value #{followersCount}
                         span Followers
-        //- .tabsContainer
-        //-     +createTab("Posts", `/profile/${profileUser.username}`, selectedTab != "replies")
-        //-     +createTab("Replies", `/profile/${profileUser.username}/replies`, selectedTab == "replies")
+        .tabsContainer
+            +createTab("Posts", `/profile/${profileUser.username}`, selectedTab != "replies")
+            +createTab("Replies", `/profile/${profileUser.username}/replies`, selectedTab == "replies")
 
         .pinnedPostContainer
         .postsContainer
