--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -4,9 +4,9 @@ block content
     if !profileUser
         span.errorMessage Check the url you are trying to access
     else  
-        //- script.
-        //-     var profileUserId = '!{profileUser._id}';
-        //-     var selectedTab = '!{selectedTab}';
+        script.
+            var profileUserId = '!{profileUser._id}';
+            var selectedTab = '!{selectedTab}';
 
         //- - followersCount = profileUser.followers.length
         //- - followingCount = profileUser.following.length
@@ -55,7 +55,7 @@ block content
             +createTab("Posts", `/profile/${profileUser.username}`, selectedTab != "replies")
             +createTab("Replies", `/profile/${profileUser.username}/replies`, selectedTab == "replies")
 
-        .pinnedPostContainer
+        //- .pinnedPostContainer
         .postsContainer
 
         +createPostModals(userLoggedIn)
