--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -8,8 +8,8 @@ block content
             var profileUserId = '!{profileUser._id}';
             var selectedTab = '!{selectedTab}';
 
-        //- - followersCount = profileUser.followers.length
-        //- - followingCount = profileUser.following.length
+        - followersCount = profileUser.followers.length
+        - followingCount = profileUser.following.length
             
         .profileHeaderContainer
             .coverPhotoSection
