Did the upload-cover-photo mechanism

--- a/views/login.pug
+++ b/views/login.pug
@@ -10,8 +10,8 @@ block content
             //- input(type="text", name="logUsername", placeholder="Username or email", value=logUsername required="")
             //- input(type="password", name="logPassword", placeholder="Password", required="")
 
-            input(type="text", name="logUsername", placeholder="Username or email", value="marik8998" required="")
-            input(type="password", name="logPassword", placeholder="Password", value="marik8998" required="")
+            input(type="text", name="logUsername", placeholder="Username or email", value="pavlik8998" required="")
+            input(type="password", name="logPassword", placeholder="Password", value="pavlik8998" required="")
 
             input(type="submit", value="Login")
         a(href="/register") Need an account? Register here.
