--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -14,11 +14,11 @@ block content
         .profileHeaderContainer
             .coverPhotoSection
                 .coverPhotoContainer
-                    if profileUser.coverPhoto
-                        img(src=profileUser.coverPhoto, alt="User's cover photo")
+                    if profileUser.coverPhoto 
+                        img(src=profileUser.coverPhoto, alt="User`s cover photo!")
 
                     if profileUser._id == userLoggedIn._id
-                        button.coverPhotoButton(data-toggle="modal", data-target="#imageUploadModal")
+                        button.coverPhotoButton(data-toggle="modal", data-target="#coverPhotoUploadModal")
                             i.fas.fa-camera
 
                 .userImageContainer
@@ -55,12 +55,12 @@ block content
             +createTab("Posts", `/profile/${profileUser.username}`, selectedTab != "replies")
             +createTab("Replies", `/profile/${profileUser.username}/replies`, selectedTab == "replies")
 
-        //- .pinnedPostContainer
+
         .postsContainer
 
         +createPostModals(userLoggedIn)
         +createImageUploadModal()
-        //- +createCoverPhotoUploadModal()
+        +createCoverPhotoUploadModal()
 
 block scripts
     script(src="/js/profile.js")
