--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -33,6 +33,7 @@ html(lang="en")
                 .mainSectionContainer.col-10.col-md-8.col-lg-8
                     .titleContainer
                         h1 #{pageTitle}
+                        block headerButton
 
                     block content
 
