--- a/views/chatPage.pug
+++ b/views/chatPage.pug
@@ -1,8 +1,12 @@
 extends layouts/main-layout.pug
 
 block content
-    script.
-        let chatId = '!{chat._id}';
+
+    if errorMessage
+        span.errorMessage #{errorMessage}
+    else
+        script.
+            let chatId = '!{chat._id}';
 
 block scripts
     script(src="/js/chatPage.js")
