--- a/views/chatPage.pug
+++ b/views/chatPage.pug
@@ -10,8 +10,8 @@ block content
 
         .chatPageContainer
             .chatTitleBarContainer
+                +createChatImage(chat, userLoggedIn)
                 span#chatName This is the chat
-
             .mainContentContainer
                 .chatContainer
                     .chatMessages
