--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -133,7 +133,7 @@ mixin createChatImage(chatData, userLoggedIn)
                 span +#{remainingUsers}
 
         each user in chatData.users
-            if chatData.users.length != 1 && user._id == userLoggedIn._id
+            if chatData.users.length !== 1 && user._id === userLoggedIn._id
                 - continue
             else if i >= maxImagesToShow    
                 - break
